# ffs

./: ffs.rb
.github/workflows/: build.yml  mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_json.rs  fuzz_toml.rs  fuzz_yaml.rs
mayhem/: Dockerfile  fuzz_json.Mayhemfile  fuzz_toml.Mayhemfile  fuzz_yaml.Mayhemfile  injected_lib.rs
